objects/ffr__ReportingDrillMapping__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportingdrillmapping</customHelpPage>
    <fields>
        <fullName>ffr__DrillPromptKey__c</fullName>
        <label>Drill Prompt Key</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RP01</fullName>
                </value>
                <value>
                    <fullName>RP02</fullName>
                </value>
                <value>
                    <fullName>RP03</fullName>
                </value>
                <value>
                    <fullName>RP04</fullName>
                </value>
                <value>
                    <fullName>RP05</fullName>
                </value>
                <value>
                    <fullName>RP06</fullName>
                </value>
                <value>
                    <fullName>RP07</fullName>
                </value>
                <value>
                    <fullName>RP08</fullName>
                </value>
                <value>
                    <fullName>RP09</fullName>
                </value>
                <value>
                    <fullName>RP10</fullName>
                </value>
                <value>
                    <fullName>RP11</fullName>
                </value>
                <value>
                    <fullName>RP12</fullName>
                </value>
                <value>
                    <fullName>RP13</fullName>
                </value>
                <value>
                    <fullName>RP14</fullName>
                </value>
                <value>
                    <fullName>RP15</fullName>
                </value>
                <value>
                    <fullName>RP16</fullName>
                </value>
                <value>
                    <fullName>RP17</fullName>
                </value>
                <value>
                    <fullName>RP18</fullName>
                </value>
                <value>
                    <fullName>RP19</fullName>
                </value>
                <value>
                    <fullName>RP20</fullName>
                </value>
                <value>
                    <fullName>RP21</fullName>
                </value>
                <value>
                    <fullName>RP22</fullName>
                </value>
                <value>
                    <fullName>RP23</fullName>
                </value>
                <value>
                    <fullName>RP24</fullName>
                </value>
                <value>
                    <fullName>RP25</fullName>
                </value>
                <value>
                    <fullName>RP26</fullName>
                </value>
                <value>
                    <fullName>RP27</fullName>
                </value>
                <value>
                    <fullName>RP28</fullName>
                </value>
                <value>
                    <fullName>RP29</fullName>
                </value>
                <value>
                    <fullName>RP30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__DrillType__c</fullName>
        <label>Drill Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prompt</fullName>
                </value>
                <value>
                    <fullName>Column Filter</fullName>
                </value>
                <value>
                    <fullName>Grouping Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ReportingDefinition__c</fullName>
        <label>Reporting Definition</label>
        <referenceTo>ffr__ReportingDefinition__c</referenceTo>
        <relationshipLabel>Reporting Drill Mappings</relationshipLabel>
        <relationshipName>ReportingDrillMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__TemplateKey__c</fullName>
        <label>Template Key</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ffr__DrillType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RP01</fullName>
                </value>
                <value>
                    <fullName>RP02</fullName>
                </value>
                <value>
                    <fullName>RP03</fullName>
                </value>
                <value>
                    <fullName>RP04</fullName>
                </value>
                <value>
                    <fullName>RP05</fullName>
                </value>
                <value>
                    <fullName>RP06</fullName>
                </value>
                <value>
                    <fullName>RP07</fullName>
                </value>
                <value>
                    <fullName>RP08</fullName>
                </value>
                <value>
                    <fullName>RP09</fullName>
                </value>
                <value>
                    <fullName>RP10</fullName>
                </value>
                <value>
                    <fullName>RP11</fullName>
                </value>
                <value>
                    <fullName>RP12</fullName>
                </value>
                <value>
                    <fullName>RP13</fullName>
                </value>
                <value>
                    <fullName>RP14</fullName>
                </value>
                <value>
                    <fullName>RP15</fullName>
                </value>
                <value>
                    <fullName>RP16</fullName>
                </value>
                <value>
                    <fullName>RP17</fullName>
                </value>
                <value>
                    <fullName>RP18</fullName>
                </value>
                <value>
                    <fullName>RP19</fullName>
                </value>
                <value>
                    <fullName>RP20</fullName>
                </value>
                <value>
                    <fullName>RP21</fullName>
                </value>
                <value>
                    <fullName>RP22</fullName>
                </value>
                <value>
                    <fullName>RP23</fullName>
                </value>
                <value>
                    <fullName>RP24</fullName>
                </value>
                <value>
                    <fullName>RP25</fullName>
                </value>
                <value>
                    <fullName>RP26</fullName>
                </value>
                <value>
                    <fullName>RP27</fullName>
                </value>
                <value>
                    <fullName>RP28</fullName>
                </value>
                <value>
                    <fullName>RP29</fullName>
                </value>
                <value>
                    <fullName>RP30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reporting Drill Mapping</label>
    <nameField>
        <label>Reporting Drill Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Drill Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>